--- a/GUI practice.vcxproj.filters
+++ b/GUI practice.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Register_Form.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainHub.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -33,6 +36,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Register_Form.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MainHub.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
