--- a/GUI practice.vcxproj.filters
+++ b/GUI practice.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="MainHub.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Add_Expense.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MainHub.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Add_Expense.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
